# bom_extractor

./: .gitignore  LICENSE_NOTE.txt  README.md  pyproject.toml  requirements.txt
baseline_outputs/baseline_v0/: rows.jsonl
benchmark_outputs/milestone_1_run_001/: document_summary.json  rows.csv  rows.jsonl
benchmark_outputs/milestone_2_run_001/: document_summary.json
docs/: provenance_diagnostics.md
examples/: run_on_uploaded_samples.py
output/: document_summary.json  rows.csv  rows.jsonl
output/logs/: pipeline.log.jsonl
output_sample/E0080082_01-06_BOM/logs/: pipeline.log.jsonl
src/bom_extractor/: cli.py  config.py  logging_utils.py  models.py  normalizer.py  pipeline.py  provenance.py  storage.py  utils.py  validators.py
src/bom_extractor/fusion/: __init__.py  page_fuser.py
src/bom_extractor/normalization/: __init__.py  header_extraction.py  row_boundary_engine.py  row_reconstruction.py  table_structure.py
src/bom_extractor/parsers/: base.py  camelot_parser.py  ocr_parser.py  pdfplumber_parser.py  pymupdf_parser.py
src/bom_extractor/zoning/: __init__.py  page_zoning.py
src/bom_extractor_phase1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_decontamination.py  test_fusion.py  test_header_extraction.py  test_normalizer.py  test_pipeline_batch.py  test_pipeline_smoke.py  test_pymupdf_parser.py  test_row_boundary_engine.py  test_row_reconstruction.py  test_utils.py  test_zoning.py
